--- a/MoonriseV2Mod/MoonriseV2Mod.csproj
+++ b/MoonriseV2Mod/MoonriseV2Mod.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MoonriseV2Mod</RootNamespace>
-    <AssemblyName>MoonriseV2Mod</AssemblyName>
+    <AssemblyName>MoonriseV2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -72,6 +72,7 @@
     <Reference Include="UnityEngine.AssetBundleModule">
       <HintPath>S:\Games\SteamLibrary\steamapps\common\VRChat\MelonLoader\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="UnityEngine.BaselibModule">
       <HintPath>S:\Games\SteamLibrary\steamapps\common\VRChat\MelonLoader\Managed\UnityEngine.BaselibModule.dll</HintPath>
     </Reference>
@@ -90,17 +91,26 @@
     <Reference Include="VRCCore-Standalone">
       <HintPath>S:\Games\SteamLibrary\steamapps\common\VRChat\MelonLoader\Managed\VRCCore-Standalone.dll</HintPath>
     </Reference>
+    <Reference Include="VRCSDKBase, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\MoonriseAssetBundles.cs" />
     <Compile Include="API\MoonriseTabApi.cs" />
     <Compile Include="API\MRUser.cs" />
+    <Compile Include="API\PlayerCheckApi.cs" />
     <Compile Include="API\RubyButtonApi.cs" />
+    <Compile Include="API\UshioRubyModifiers.cs" />
     <Compile Include="API\UshioUI.cs" />
+    <Compile Include="AvatarFunctions\AvatarFunctionsBase.cs" />
+    <Compile Include="AvatarFunctions\AvatarHider.cs" />
+    <Compile Include="BaseFunctions\PlayerMute.cs" />
     <Compile Include="Moonrise.cs" />
     <Compile Include="MoonriseConsole.cs" />
-    <Compile Include="MoonriseMainFunctions.cs" />
+    <Compile Include="BaseFunctions\MoonriseBaseFunctions.cs" />
+    <Compile Include="MoonriseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Config.cs" />
+    <Compile Include="SocialInterractions\SocialInterractionsBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="moonrise.assetbundle" />
