--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord-webhook-node": "^1.1.8",
     "express": "^4.17.1",
     "localtunnel": "^2.0.1",
     "mysql": "^2.18.1",
