--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "localtunnel": "^2.0.1",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
-    "nodemon": "^2.0.8"
+    "nodemon": "^2.0.8",
+    "ws": "^7.5.3"
   }
 }
