--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord-webhook": "^0.1.0",
     "discord-webhook-node": "^1.1.8",
     "express": "^4.17.1",
     "localtunnel": "^2.0.1",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
-    "nodemon": "^2.0.8",
+    "nodemon": "^2.0.12",
     "ws": "^7.5.3"
   }
 }
