--- a/MoonriseV2Mod/MoonriseV2Mod.csproj
+++ b/MoonriseV2Mod/MoonriseV2Mod.csproj
@@ -104,6 +104,7 @@
     <Compile Include="API\UshioUI.cs" />
     <Compile Include="AvatarFunctions\AvatarFunctionsBase.cs" />
     <Compile Include="AvatarFunctions\AvatarHider.cs" />
+    <Compile Include="BaseFunctions\EmojiSpam.cs" />
     <Compile Include="BaseFunctions\PlayerMute.cs" />
     <Compile Include="Moonrise.cs" />
     <Compile Include="MoonriseConsole.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\AddBlocker.cs" />
     <Compile Include="Settings\Config.cs" />
+    <Compile Include="Settings\ModInfo.cs" />
     <Compile Include="Settings\SettingsFunctions.cs" />
     <Compile Include="SocialInterractions\CrasherReport.cs" />
     <Compile Include="SocialInterractions\PlayerTeleport.cs" />
