--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord-webhook": "^0.1.0",
+    "bcrypt": "^5.0.1",
     "discord-webhook-node": "^1.1.8",
     "express": "^4.17.1",
     "localtunnel": "^2.0.1",
