--- a/MoonriseV2Mod/MoonriseV2Mod.csproj
+++ b/MoonriseV2Mod/MoonriseV2Mod.csproj
@@ -110,6 +110,7 @@
     <Compile Include="MoonriseConsole.cs" />
     <Compile Include="BaseFunctions\MoonriseBaseFunctions.cs" />
     <Compile Include="MoonriseObject.cs" />
+    <Compile Include="PortableMirror.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\AddBlocker.cs" />
     <Compile Include="Settings\Config.cs" />
