--- a/MoonriseV2Mod/MoonriseV2Mod.csproj
+++ b/MoonriseV2Mod/MoonriseV2Mod.csproj
@@ -94,6 +94,7 @@
     <Reference Include="VRCSDKBase, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\AddonApi.cs" />
     <Compile Include="API\VWxjMWFtSXlVbkJpYldSQ1kwZHJQUT09.cs" />
     <Compile Include="API\QXNzZXRCdW5kbGVz.cs" />
     <Compile Include="API\MoonriseTabApi.cs" />
@@ -102,24 +103,24 @@
     <Compile Include="API\RubyButtonApi.cs" />
     <Compile Include="API\VXNoaW9SdWJ5TW9kaWZpZXJz.cs" />
     <Compile Include="API\VlhOb2FXOVZTUT09.cs" />
-    <Compile Include="Q3VzdG9tQmVoYXZpb3Vy\MRAvatarHider.cs" />
-    <Compile Include="QXZhdGFyRnVuY3Rpb25z\QXZhdGFyRnVuY3Rpb25z.cs" />
-    <Compile Include="QXZhdGFyRnVuY3Rpb25z\VVZoYWFHUkhSbmxUUjJ4cldsaEpQUT09.cs" />
-    <Compile Include="QmFzZUZ1bmN0aW9ucw==\RW1vamlTcGFt.cs" />
-    <Compile Include="QmFzZUZ1bmN0aW9ucw==\VlVkNGFHVlhWbmxVV0ZZd1dsRTlQUT09.cs" />
-    <Compile Include="VFc5dmJuSnBjMlU9.cs" />
-    <Compile Include="TW9vbnJpc2VDb25zb2xl.cs" />
-    <Compile Include="QmFzZUZ1bmN0aW9ucw==\TW9vbnJpc2VCYXNlRnVuY3Rpb25z.cs" />
-    <Compile Include="VkZjNWRtSnVTbkJqTWxaUVdXMXZQUT09.cs" />
-    <Compile Include="VlVjNWVXUkhSbWxpUjFaT1lWaEpQUT09.cs" />
+    <Compile Include="CustomBehavior\MRAvatarHider.cs" />
+    <Compile Include="AvatarFunctions\QXZhdGFyRnVuY3Rpb25z.cs" />
+    <Compile Include="AvatarFunctions\VVZoYWFHUkhSbmxUUjJ4cldsaEpQUT09.cs" />
+    <Compile Include="BaseFunctions\RW1vamlTcGFt.cs" />
+    <Compile Include="BaseFunctions\VlVkNGFHVlhWbmxVV0ZZd1dsRTlQUT09.cs" />
+    <Compile Include="Moonrise.cs" />
+    <Compile Include="MoonriseConsole.cs" />
+    <Compile Include="BaseFunctions\TW9vbnJpc2VCYXNlRnVuY3Rpb25z.cs" />
+    <Compile Include="MoonriseObject.cs" />
+    <Compile Include="PortableMirror.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="U2V0dGluZ3M=\VVZkU2ExRnRlSFpaTW5Sc1kyYzlQUT09.cs" />
-    <Compile Include="U2V0dGluZ3M=\Q29uZmln.cs" />
-    <Compile Include="U2V0dGluZ3M=\VFc5a1NXNW1idz09.cs" />
-    <Compile Include="U2V0dGluZ3M=\VTJWMGRHbHVaM05HZFc1amRHbHZibk09.cs" />
-    <Compile Include="U29jaWFsSW50ZXJyYWN0aW9ucw==\VVROS2FHTXlhR3hqYkVwc1kwRTlQUT09.cs" />
-    <Compile Include="U29jaWFsSW50ZXJyYWN0aW9ucw==\VUd4aGVXVnlWRkE9.cs" />
-    <Compile Include="U29jaWFsSW50ZXJyYWN0aW9ucw==\VmxSSk5XRnRSbGhTYms1VVZucFZkMWRzYUV0bFZteFlWR3BDYUZaNmJERlpla0pMWVVkTmVWWlVNRDA9.cs" />
+    <Compile Include="Settings\VVZkU2ExRnRlSFpaTW5Sc1kyYzlQUT09.cs" />
+    <Compile Include="Settings\MRConfiguration.cs" />
+    <Compile Include="Settings\VFc5a1NXNW1idz09.cs" />
+    <Compile Include="Settings\VTJWMGRHbHVaM05HZFc1amRHbHZibk09.cs" />
+    <Compile Include="SocialInterractions\VVROS2FHTXlhR3hqYkVwc1kwRTlQUT09.cs" />
+    <Compile Include="SocialInterractions\VUd4aGVXVnlWRkE9.cs" />
+    <Compile Include="SocialInterractions\VmxSSk5XRnRSbGhTYms1VVZucFZkMWRzYUV0bFZteFlWR3BDYUZaNmJERlpla0pMWVVkTmVWWlVNRDA9.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="moonrise.assetbundle" />
