--- a/.gitignore
+++ b/.gitignore
@@ -513,5 +513,8 @@ Backend/videos/
 Backend/data/moonrise.db
 Backend/data/crashers.db
 Backend/data/modInfo.db
+Backend/data/admindb.db
+Backend/data/
+Backend/request.rest
 ssh
 ssh.pub
