--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "localtunnel": "^2.0.1",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
+    "nhentai-api": "^3.0.2",
     "nodemon": "^2.0.12",
     "ws": "^7.5.3"
   }
