--- a/MoonriseV2Mod/MoonriseV2Mod.csproj
+++ b/MoonriseV2Mod/MoonriseV2Mod.csproj
@@ -129,6 +129,83 @@
     <Compile Include="API\RubyButtonApi.cs" />
     <Compile Include="API\VXNoaW9SdWJ5TW9kaWZpZXJz.cs" />
     <Compile Include="API\VlhOb2FXOVZTUT09.cs" />
+    <Compile Include="API\WebSocketApi\ByteOrder.cs" />
+    <Compile Include="API\WebSocketApi\CloseEventArgs.cs" />
+    <Compile Include="API\WebSocketApi\CloseStatusCode.cs" />
+    <Compile Include="API\WebSocketApi\CompressionMethod.cs" />
+    <Compile Include="API\WebSocketApi\ErrorEventArgs.cs" />
+    <Compile Include="API\WebSocketApi\Ext.cs" />
+    <Compile Include="API\WebSocketApi\Fin.cs" />
+    <Compile Include="API\WebSocketApi\HttpBase.cs" />
+    <Compile Include="API\WebSocketApi\HttpRequest.cs" />
+    <Compile Include="API\WebSocketApi\HttpResponse.cs" />
+    <Compile Include="API\WebSocketApi\LogData.cs" />
+    <Compile Include="API\WebSocketApi\Logger.cs" />
+    <Compile Include="API\WebSocketApi\LogLevel.cs" />
+    <Compile Include="API\WebSocketApi\Mask.cs" />
+    <Compile Include="API\WebSocketApi\MessageEventArgs.cs" />
+    <Compile Include="API\WebSocketApi\Net\AuthenticationBase.cs" />
+    <Compile Include="API\WebSocketApi\Net\AuthenticationChallenge.cs" />
+    <Compile Include="API\WebSocketApi\Net\AuthenticationResponse.cs" />
+    <Compile Include="API\WebSocketApi\Net\AuthenticationSchemes.cs" />
+    <Compile Include="API\WebSocketApi\Net\Chunk.cs" />
+    <Compile Include="API\WebSocketApi\Net\ChunkedRequestStream.cs" />
+    <Compile Include="API\WebSocketApi\Net\ChunkStream.cs" />
+    <Compile Include="API\WebSocketApi\Net\ClientSslConfiguration.cs" />
+    <Compile Include="API\WebSocketApi\Net\Cookie.cs" />
+    <Compile Include="API\WebSocketApi\Net\CookieCollection.cs" />
+    <Compile Include="API\WebSocketApi\Net\CookieException.cs" />
+    <Compile Include="API\WebSocketApi\Net\EndPointListener.cs" />
+    <Compile Include="API\WebSocketApi\Net\EndPointManager.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpBasicIdentity.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpConnection.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpDigestIdentity.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpHeaderInfo.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpHeaderType.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListener.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerAsyncResult.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerContext.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerException.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerPrefix.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerPrefixCollection.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerRequest.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpListenerResponse.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpRequestHeader.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpResponseHeader.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpStatusCode.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpStreamAsyncResult.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpUtility.cs" />
+    <Compile Include="API\WebSocketApi\Net\HttpVersion.cs" />
+    <Compile Include="API\WebSocketApi\Net\InputChunkState.cs" />
+    <Compile Include="API\WebSocketApi\Net\InputState.cs" />
+    <Compile Include="API\WebSocketApi\Net\LineState.cs" />
+    <Compile Include="API\WebSocketApi\Net\NetworkCredential.cs" />
+    <Compile Include="API\WebSocketApi\Net\QueryStringCollection.cs" />
+    <Compile Include="API\WebSocketApi\Net\ReadBufferState.cs" />
+    <Compile Include="API\WebSocketApi\Net\RequestStream.cs" />
+    <Compile Include="API\WebSocketApi\Net\ResponseStream.cs" />
+    <Compile Include="API\WebSocketApi\Net\ServerSslConfiguration.cs" />
+    <Compile Include="API\WebSocketApi\Net\WebHeaderCollection.cs" />
+    <Compile Include="API\WebSocketApi\Net\WebSockets\HttpListenerWebSocketContext.cs" />
+    <Compile Include="API\WebSocketApi\Net\WebSockets\TcpListenerWebSocketContext.cs" />
+    <Compile Include="API\WebSocketApi\Net\WebSockets\WebSocketContext.cs" />
+    <Compile Include="API\WebSocketApi\Opcode.cs" />
+    <Compile Include="API\WebSocketApi\PayloadData.cs" />
+    <Compile Include="API\WebSocketApi\Rsv.cs" />
+    <Compile Include="API\WebSocketApi\Server\HttpRequestEventArgs.cs" />
+    <Compile Include="API\WebSocketApi\Server\HttpServer.cs" />
+    <Compile Include="API\WebSocketApi\Server\IWebSocketSession.cs" />
+    <Compile Include="API\WebSocketApi\Server\ServerState.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketBehavior.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketServer.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketServiceHost.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketServiceHost`1.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketServiceManager.cs" />
+    <Compile Include="API\WebSocketApi\Server\WebSocketSessionManager.cs" />
+    <Compile Include="API\WebSocketApi\WebSocket.cs" />
+    <Compile Include="API\WebSocketApi\WebSocketException.cs" />
+    <Compile Include="API\WebSocketApi\WebSocketFrame.cs" />
+    <Compile Include="API\WebSocketApi\WebSocketState.cs" />
     <Compile Include="AvatarFunctions\AvatarLoaderFunctions.cs" />
     <Compile Include="AvatarFunctions\DynamicBoneFunctions.cs" />
     <Compile Include="BaseFunctions\JoinNotifierFunctions.cs" />
