--- a/.gitignore
+++ b/.gitignore
@@ -512,9 +512,9 @@ Backend/index/
 Backend/videos/
 Backend/data/moonrise.db
 Backend/data/crashers.db
-//Backend/data/modInfo.db
+Backend/data/modInfo.db
 Backend/data/admindb.db
-//Backend/data/
+Backend/data/
 Backend/request.rest
 ssh
 ssh.pub
